# PhytoOracle

./: .gitignore  QUICKSTART.md  README.md  setup_directories.py  test_output.txt  test_output_full.txt  test_tech_stack.py
backend/: .env.example  pyproject.toml
backend/apps/: __init__.py
backend/apps/admin/: __init__.py  app.py
backend/apps/api/: __init__.py  deps.py  main.py
backend/config/: README.md  llm_config.json.example  storage_config.json
backend/core/: config.py
backend/domain/: __init__.py  diagnosis.py  disease.py  feature.py  plant.py  value_objects.py
backend/infrastructure/: __init__.py
backend/infrastructure/llm/: __init__.py  cache_manager.py  instructor_client.py  llm_config.py  vlm_client.py  vlm_exceptions.py
backend/infrastructure/ontology/: __init__.py  indexer.py  (+6 more)
backend/schemas/: README.md  disease_schema.json  feature_schema.json  host_disease_schema.json
backend/scripts/: create_database.py  init_db.sql  seed_data.sql  verify_ddl.py
backend/services/: __init__.py  batch_diagnosis_service.py  diagnosis_service.py  image_service.py  knowledge_service.py
backend/tests/: test_knowledge_base_validation.py  test_p4_1_acceptance.py  test_p4_1_server_start.py  test_p4_2_diagnosis_api.py  test_p4_3_knowledge_api.py  test_p4_3_quick_validation.py  test_p4_4_ontology_api.py  test_p4_4_simple_validation.py  test_p4_5_batch_diagnosis_api.py  test_p4_5_verify_implementation.py  test_p4_6_images_api.py  test_p4_6_images_api_simple.py  test_p4_gate_validation.py  test_pydantic_models.py  test_qwen_integration.py  test_vlm_providers.py
(+264 files in other folders)
